--- a/Contents/Resources/document.html
+++ b/Contents/Resources/document.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <!-- CSS -->
     <link rel="stylesheet" media="all" href="github.css">
+    <link rel="stylesheet" media="all" href="style.css">
     <!-- JS -->
     <script type="text/javascript" src="texzilla.js"></script>
     <script type="text/javascript" src="highlight/highlight.pack.js"></script>
